--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,70 @@
 
 Project name: White-Wolf-OP3-PA
 
+31/01/2018
+
+  * Linux 3.18.93 (Greg Kroah-Hartman) [72b37cd]
+  * hrtimer: Reset hrtimer cpu base proper on CPU hotplug (Thomas Gleixner) [d05d5f8]
+  * ipv4: Make neigh lookup keys for loopback/point-to-point devices be INADDR_ANY (Jim Westfall) [4249f59]
+  * ipv6: fix udpv6 sendmsg crash caused by too small MTU (Mike Maloney) [22bce46]
+  * net: Allow neigh contructor functions ability to modify the primary_key (Jim Westfall) [723dfbe]
+  * vmxnet3: repair memory leak (Neil Horman) [42b8d54]
+  * sctp: return error if the asoc has been peeled off in sctp_wait_for_sndbuf (Xin Long) [1c55313]
+  * sctp: do not allow the v4 socket to bind a v4mapped v6 address (Xin Long) [b76406d]
+  * pppoe: take ->needed_headroom of lower device into account on xmit (Guillaume Nault) [211b0eb]
+  * net: qdisc_pkt_len_init() should be more robust (Eric Dumazet) [98a2eaa]
+  * tcp: __tcp_hdrlen() helper (Craig Gallek) [904ff2d]
+  * net: igmp: fix source address check for IGMPv3 reports (Felix Fietkau) [46f8314]
+  * dccp: don't restart ccid2_hc_tx_rto_expire() if sk in closed state (Alexey Kodanev) [a91bf47]
+  * net: tcp: close sock if net namespace is exiting (Dan Streetman) [dc7aba1]
+  * x86/microcode/intel: Extend BDW late-loading further with LLC size check (Jia Zhang) [6950103]
+  * eventpoll.h: add missing epoll event masks (Greg KH) [4fb270c]
+  * scsi: libiscsi: fix shifting of DID_REQUEUE host byte (Johannes Thumshirn) [dd4c8e3]
+  * fs/fcntl: f_setown, avoid undefined behaviour (Jiri Slaby) [d0de4f9]
+  * reiserfs: don't preallocate blocks for extended attributes (Jeff Mahoney) [5ca8057]
+  * reiserfs: fix race in prealloc discard (Jeff Mahoney) [a31f379]
+  * netfilter: xt_osf: Add missing permission checks (Kevin Cernekee) [4a436fc]
+  * netfilter: nfnetlink_cthelper: Add missing permission checks (Kevin Cernekee) [31da979]
+  * netfilter: nf_conntrack_sip: extend request line validation (Ulrich Weber) [c832c93]
+  * netfilter: restart search if moved to other chain (Florian Westphal) [a7332ff]
+  * netfilter: nf_ct_expect: remove the redundant slash when policy name is empty (Liping Zhang) [f0cbefe4]
+  * ipc: msg, make msgrcv work with LONG_MIN (Jiri Slaby) [4170a7d]
+  * hwpoison, memcg: forcibly uncharge LRU pages (Michal Hocko) [fbfbd6f]
+  * mm/mmap.c: do not blow on PROT_NONE MAP_FIXED holes in the stack (Michal Hocko) [fd1e8a0]
+  * can: af_can: canfd_rcv(): replace WARN_ONCE by pr_warn_once (Marc Kleine-Budde) [f1efe51]
+  * can: af_can: can_rcv(): replace WARN_ONCE by pr_warn_once (Marc Kleine-Budde) [5758a47]
+  * usbip: Fix implicit fallthrough warning (Jonathan Dieter) [b1805ce]
+  * x86/asm/32: Make sync_core() handle missing CPUID on all 32-bit kernels (Andy Lutomirski) [6c65b32]
+  * MIPS: AR7: ensure the port type's FCR value is used (Jonas Gorski) [40ce535]
+  * arm64: KVM: Fix SMCCC handling of unimplemented SMC/HVC calls (Marc Zyngier) [e82ca39]
+  * dm thin metadata: THIN_MAX_CONCURRENT_LOCKS should be 6 (Dennis Yang) [96780e4]
+  * dm btree: fix serious bug in btree_split_beneath() (Joe Thornber) [6639156]
+  * ARM: dts: kirkwood: fix pin-muxing of MPP7 on OpenBlocks A7 (Thomas Petazzoni) [9a3008c]
+  * phy: work around 'phys' references to usb-nop-xceiv devices (Arnd Bergmann) [328ca13]
+  * Input: twl4030-vibra - fix sibling-node lookup (Johan Hovold) [1049b41]
+  * Input: twl4030-vibra - fix ERROR: Bad of_node_put() warning (Marek Belisko) [82ebbe0]
+  * Input: twl6040-vibra - fix child-node lookup (Johan Hovold) [5b77342]
+  * Input: twl6040-vibra - fix DT node memory management (H. Nikolaus Schaller) [84843dc]
+  * Input: 88pm860x-ts - fix child-node lookup (Johan Hovold) [7c5c723]
+  * pipe: avoid round_pipe_size() nr_pages overflow on 32-bit (Joe Lawrence) [91a4a0d]
+  * af_key: fix buffer overread in parse_exthdrs() (Eric Biggers) [a99d93f]
+  * af_key: fix buffer overread in verify_address_len() (Eric Biggers) [09c7ba1]
+  * ALSA: hda - Apply the existing quirk to iMac 14,1 (Takashi Iwai) [08b56cb]
+  * ALSA: pcm: Remove yet superfluous WARN_ON() (Takashi Iwai) [2e68498]
+  * futex: Prevent overflow by strengthen input validation (Li Jinyue) [19a68ef]
+  * scsi: sg: disable SET_FORCE_LOW_DMA (Hannes Reinecke) [c471dd3]
+  * gcov: disable for COMPILE_TEST (Arnd Bergmann) [a4095c1]
+  * qcacld-2.0: Update to CAF LA.UM.5.5.r1-06400-8x96.0 (Sultanxda) [dcd070b]
+  * drivers: cpufreq_interactive: handle error for module load fail (gaurav jindal) [4665c45]
+  * sched/completion: Add lock-free checking of the blocking case (Nicholas Mc Guire) [c299743]
+  * sched/deadline: Avoid pointless __setscheduler() (Wanpeng Li) [68322ae]
+  * sched/wait: Fix a kthread race with wait_woken() (Peter Zijlstra) [92e61b9]
+  * vmstat: Reduce time interval to stat update on idle cpu (Christoph Lameter) [f7a331a]
+  * cpufreq: set policy with user_policy data (Lianwei Wang) [f1fff0f]
+  * arch: arm/arm64: silence some log spam (Nathan Chancellor) [cf33db4]
+  * kernel: cpu: disable some log spam (Nathan Chancellor) [36180e0]
+  * PM / devfreq: Skip status update on uninitialized previous_freq (Tobias Jakobi) [69de32a]
+
 21/01/2018
 
   * Linux 3.18.92 (Greg Kroah-Hartman) [2b0e881]
