--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,111 @@
 
 Project name: White-Wolf-OP3-PA
 
+25/02/2018
+
+ * Linux 3.18.96 (Greg Kroah-Hartman) [fabc419]
+  * crypto: s5p-sss - Fix kernel Oops in AES-ECB mode (Kamil Konieczny) [6c11d9a]
+  * KVM: async_pf: Fix #DF due to inject "Page not Present" and "Page Ready" exceptions simultaneously (Wanpeng Li) [d97dd58]
+  * hippi: Fix a Fix a possible sleep-in-atomic bug in rr_close (Jia-Ju Bai) [9748fee]
+  * xen: XEN_ACPI_PROCESSOR is Dom0-only (Jan Beulich) [5f1967a]
+  * x86/mm/kmmio: Fix mmiotrace for page unaligned addresses (Karol Herbst) [b21283c]
+  * mm/early_ioremap: Fix boot hang with earlyprintk=efi,keep (Dave Young) [72b687a]
+  * dmaengine: jz4740: disable/unprepare clk if probe fails (Tobias Jordan) [0a06ef6]
+  * xfrm: Fix stack-out-of-bounds with misconfigured transport mode policies. (Steffen Klassert) [59bcdf4]
+  * spi: sun4i: disable clocks in the remove function (Takuo Koguchi) [aa80a56]
+  * 509: fix printing uninitialized stack memory when OID is empty (Eric Biggers) [11a3d9f]
+  * btrfs: Fix possible off-by-one in btrfs_search_path_in_tree (Nikolay Borisov) [9a2088b]
+  * net_sched: red: Avoid illegal values (Nogah Frankel) [b71c1a9]
+  * net_sched: red: Avoid devision by zero (Nogah Frankel) [b9c532e]
+  * gianfar: fix a flooded alignment reports because of padding issue. (Zumeng Chen) [b543bea]
+  * s390/dasd: prevent prefix I/O error (Stefan Haberland) [65598d2]
+  * powerpc/perf: Fix oops when grouping different pmu events (Ravi Bangoria) [29645f1]
+  * scripts/kernel-doc: Don't fail with status != 0 if error encountered with -none (Will Deacon) [8fb64eb]
+  * media: s5k6aa: describe some function parameters (Mauro Carvalho Chehab) [06a52d3]
+  * perf bench numa: Fixup discontiguous/sparse numa nodes (Satheesh Rajendran) [f78f090a]
+  * perf top: Fix window dimensions change handling (Jiri Olsa) [8e3ed0f]
+  * ARM: dts: am4372: Correct the interrupts_properties of McASP (Peter Ujfalusi) [71d222b]
+  * ARM: AM33xx: PRM: Remove am33xx_pwrdm_read_prev_pwrst function (Keerthy) [f35f3ab]
+  * usb: build drivers/usb/common/ when USB_SUPPORT is set (Randy Dunlap) [5d5ce5b]
+  * usbip: keep usbip_device sockfd state in sync with tcp_socket (Shuah Khan) [7cdaada]
+  * dn_getsockoptdecnet: move nf_{get/set}sockopt outside sock lock (Paolo Abeni) [72bc885]
+  * video: fbdev/mmp: add MODULE_LICENSE (Arnd Bergmann) [e357f4e]
+  * ASoC: ux500: add MODULE_LICENSE tag (Arnd Bergmann) [8e6aa2f]
+  * selinux: ensure the context is NUL terminated in security_context_to_sid_core() (Paul Moore) [0d13f4d]
+  * Provide a function to create a NUL-terminated string from unterminated data (David Howells) [cfd65fa]
+  * net: avoid skb_warn_bad_offload on IS_ERR (Willem de Bruijn) [7d805f6]
+  * netfilter: xt_RATEEST: acquire xt_rateest_mutex for hash insert (Cong Wang) [bb1e40f]
+  * netfilter: on sockopt() acquire sock lock only in the required scope (Paolo Abeni) [2c41520]
+  * netfilter: ipt_CLUSTERIP: fix out-of-bounds accesses in clusterip_tg_check() (Dmitry Vyukov) [5943568]
+  * netfilter: x_tables: avoid out-of-bounds reads in xt_request_find_{match|target} (Eric Dumazet) [8fa3cd2]
+  * netfilter: x_tables: fix int overflow in xt_alloc_table_info() (Dmitry Vyukov) [266ff21]
+  * crypto: x86/twofish-3way - Fix %rbp usage (Eric Biggers) [a5959a7]
+  * selinux: skip bounded transition processing if the policy isn't loaded (Paul Moore) [894bbc5]
+  * xfrm: check id proto in validate_tmpl() (Cong Wang) [3bbce3d]
+  * mm,vmscan: Make unregister_shrinker() no-op if register_shrinker() failed. (Tetsuo Handa) [1ee4e0d]
+  * media: r820t: fix r820t_write_reg for KASAN (Arnd Bergmann) [dd387f1]
+  * ARM: dts: s5pv210: add interrupt-parent for ohci (Arnd Bergmann) [de80d64]
+  * ALSA: seq: Fix racy pool initializations (Takashi Iwai) [e11e2e5]
+  * Btrfs: fix crash due to not cleaning up tree log block's dirty bits (Liu Bo) [f470c83]
+  * Btrfs: fix deadlock in run_delalloc_nocow (Liu Bo) [bebaf6a]
+  * console/dummy: leave .con_font_get set to NULL (Nicolas Pitre) [ec37f75]
+  * video: fbdev: atmel_lcdfb: fix display-timings lookup (Johan Hovold) [cf20994]
+  * ext4: correct documentation for grpid mount option (Ernesto A. Fernández) [fa1b65f]
+  * ext4: save error to disk in __ext4_grp_locked_error() (Zhouyi Zhou) [c7daa32]
+  * drm/radeon: adjust tested variable (Julia Lawall) [1c615ee]
+  * ALSA: seq: Fix regression by incorrect ioctl_mutex usages (Takashi Iwai) [604ced0]
+  * arm: spear13xx: Fix spics gpio controller's warning (Viresh Kumar) [653b4f8]
+  * arm: spear13xx: Fix dmas cells (Viresh Kumar) [431135c]
+  * arm: spear600: Add missing interrupt-parent of rtc (Viresh Kumar) [e6be80b]
+  * s390: fix handling of -1 in set{,fs}[gu]id16 syscalls (Eugene Syromiatnikov) [a2d97a7]
+  * PM / devfreq: Propagate error from devfreq_add_device() (Bjorn Andersson) [ad32570]
+  * IB/mlx4: Fix incorrectly releasing steerable UD QPs when have only ETH ports (Jack Morgenstein) [025be05]
+  * Linux 3.18.95 (Greg Kroah-Hartman) [3374f5d]
+  * mn10300/misalignment: Use SIGSEGV SEGV_MAPERR to report a failed user copy (Eric W. Biederman) [5a1f109]
+  * ACPI: sbshc: remove raw pointer from printk() message (Greg Kroah-Hartman) [b4cc264]
+  * pktcdvd: Fix pkt_setup_dev() error path (Bart Van Assche) [b3afc56]
+  * EDAC, octeon: Fix an uninitialized variable warning (James Hogan) [45fc650]
+  * xtensa: fix futex_atomic_cmpxchg_inatomic (Max Filippov) [45cd8af]
+  * alpha: fix reboot on Avanti platform (Mikulas Patocka) [2a13c81]
+  * alpha: fix crash if pthread_create races with signal delivery (Mikulas Patocka) [b5cbccf]
+  * signal/sh: Ensure si_signo is initialized in do_divide_error (Eric W. Biederman) [6323246]
+  * signal/openrisc: Fix do_unaligned_access to send the proper signal (Eric W. Biederman) [83b7750]
+  * kernel/async.c: revert "async: simplify lowest_in_progress()" (Rasmus Villemoes) [c27b80b]
+  * media: cxusb, dib0700: ignore XC2028_I2C_FLUSH (Mauro Carvalho Chehab) [79e068b]
+  * crypto: caam - fix endless loop when DECO acquire fails (Horia Geantă) [e7d7536]
+  * crypto: cryptd - pass through absence of ->setkey() (Eric Biggers) [9b1ccc0]
+  * crypto: hash - introduce crypto_hash_alg_has_setkey() (Eric Biggers) [cf78eb6]
+  * kernfs: fix regression in kernfs_fop_write caused by wrong type (Ivan Vecera) [7f7a064]
+  * NFS: commit direct writes even if they fail partially (J. Bruce Fields) [b98d4fa]
+  * NFS: Add a cond_resched() to nfs_commit_release_pages() (Trond Myklebust) [5903bdf]
+  * mtd: nand: Fix nand_do_read_oob() return value (Miquel Raynal) [a82dde0]
+  * media: dvb-usb-v2: lmedm04: move ts2020 attach to dm04_lme2510_tuner (Malcolm Priestley) [40c86d8]
+  * media: dvb-usb-v2: lmedm04: Improve logic checking of warm start (Malcolm Priestley) [a293279]
+  * dccp: CVE-2017-8824: use-after-free in DCCP code (Mohamed Ghannam) [615ea99]
+  * usbip: vhci: stop printing kernel pointer addresses in messages (Shuah Khan) [b64c8cb]
+  * usbip: stub: stop printing kernel pointer addresses in messages (Shuah Khan) [39d6c4d]
+  * usbip: prevent leaking socket pointer address in messages (Shuah Khan) [290bbb3]
+  * usbip: vhci-hcd: Add USB3 SuperSpeed support (Yuyang Du) [3ebfd1e]
+  * usb: usbip: Fix possible deadlocks reported by lockdep (Andrew Goodbody) [b036934]
+  * usbip: Fix potential format overflow in userspace tools (Jonathan Dieter) [d3a47ce]
+  * usbip: prevent vhci_hcd driver from leaking a socket pointer address (Shuah Khan) [e25b0dd]
+  * usbip: fix stub_rx: harden CMD_SUBMIT path to handle malicious input (Shuah Khan) [7fabafc]
+  * usbip: fix stub_rx: get_pipe() to validate endpoint number (Shuah Khan) [7566d82]
+  * posix-timer: Properly check sigevent->sigev_notify (Thomas Gleixner) [21e9ab6]
+  * CIFS: zero sensitive data when freeing (Aurelien Aptel) [8be45cd]
+  * cifs: Fix autonegotiate security settings mismatch (Daniel N Pettersson) [b8001cd]
+  * cifs: Fix missing put_xid in cifs_file_strict_mmap (Matthew Wilcox) [6f6011a]
+  * ipv4: Map neigh lookup keys in __ipv4_neigh_lookup_noref() (Wang Han) [46327b0]
+  * KEYS: encrypted: fix buffer overread in valid_master_desc() (Eric Biggers) [6e5c4ee]
+  * ARM: exynos_defconfig: Enable NFSv4 client (Krzysztof Kozlowski) [d2cbf6f]
+  * ARM: exynos_defconfig: Enable options to mount a rootfs via NFS (Javier Martinez Canillas) [9ad3c11]
+  * tcp: release sk_frag.page in tcp_disconnect (Li RongQing) [574d0db]
+  * r8169: fix RTL8168EP take too long to complete driver initialization. (Chunhao Lin) [c1e71f3]
+  * qlcnic: fix deadlock bug (Junxiao Bi) [9032265]
+  * net: igmp: add a missing rcu locking section (Eric Dumazet) [3fc5e6b0]
+  * ip6mr: fix stale iterator (Nikolay Aleksandrov) [4ba0a9e]
+  * vhost_net: stop device during reset owner (Jason Wang) [4c4b8d6]
+
 11/02/2018
 
   * qcacld-2.0: Update to CAF LA.UM.5.5.r1-06700-8x96.0 (Slawek) [de9ed50]
