--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,70 @@
 
 Project name: White-Wolf-OP3-PA
 
+12/03/2018
+
+  * cpufreq: darkness: fix compilation without state notifier (Andrzej Perczak) [7ebecc3]
+  * cpufreq: Despair be more agressive (Slawek) [14393c0]
+  * Linux 3.18.99 (Greg Kroah-Hartman) [0a33874]
+  * dm io: fix duplicate bio completion due to missing ref count (Mike Snitzer) [93221f9]
+  * fib_semantics: Don't match route with mismatching tclassid (Stefano Brivio) [d723ce0]
+  * net: ipv4: don't allow setting net.ipv4.route.min_pmtu below 68 (Sabrina Dubroca) [472c3c0]
+  * sctp: verify size of a new chunk in _sctp_make_chunk() (Alexey Kodanev) [5384b50]
+  * s390/qeth: fix IPA command submission race (Julian Wiedmann) [64a1c65]
+  * s390/qeth: fix SETIP command handling (Julian Wiedmann) [057004a]
+  * sctp: fix dst refcnt leak in sctp_v6_get_dst() (Alexey Kodanev) [9df08d4]
+  * udplite: fix partial checksum initialization (Alexey Kodanev) [8e81deb]
+  * ppp: prevent unregistered channels from connecting to PPP units (Guillaume Nault) [56ee8cc]
+  * netlink: ensure to loop over all netns in genlmsg_multicast_allns() (Nicolas Dichtel) [e3ec3e5]
+  * net: fix race on decreasing number of TX queues (Jakub Kicinski) [16ce5ab]
+  * ipv6 sit: work around bogus gcc-8 -Wrestrict warning (Arnd Bergmann) [a7d371e]
+  * hdlc_ppp: carrier detect ok, don't turn off negotiation (Denis Du) [81e83a5]
+  * bridge: check brport attr show in brport_show (Xin Long) [1b28acb]
+  * leds: do not overflow sysfs buffer in led_trigger_show (Nathan Sullivan) [3f9dd20]
+  * net: fec: introduce fec_ptp_stop and use in probe fail path (Lucas Stach) [af972b1]
+  * ARM: mvebu: Fix broken PL310_ERRATA_753970 selects (Ulf Magnusson) [64f9062]
+  * cpufreq: s3c24xx: Fix broken s3c_cpufreq_init() (Viresh Kumar) [88e6702]
+  * ALSA: usb-audio: Add a quirck for B&W PX headphones (Erik Veijola) [b100cb0]
+  * tpm_i2c_nuvoton: fix potential buffer overruns caused by bit glitches on the bus (Jeremy Boone) [27725c3]
+  * tpm_i2c_infineon: fix potential buffer overruns caused by bit glitches on the bus (Jeremy Boone) [b83cf6a]
+  * Linux 3.18.98 (Greg Kroah-Hartman) [c7f4adb]
+  * net: gianfar_ptp: move set_fipers() to spinlock protecting area (Yangbo Lu) [6f63f1a]
+  * sctp: make use of pre-calculated len (Marcelo Ricardo Leitner) [1076add]
+  * xen/gntdev: Fix partial gntdev_mmap() cleanup (Ross Lagerwall) [482af8e]
+  * xen/gntdev: Fix off-by-one error when unmapping with holes (Ross Lagerwall) [772220d]
+  * SolutionEngine771x: fix Ether platform data (Sergei Shtylyov) [de8ff00]
+  * mdio-sun4i: Fix a memory leak (Christophe JAILLET) [afdca04]
+  * xen-netfront: enable device after manual module load (Eduardo Otubo) [b57357a]
+  * drm/ttm: check the return value of kzalloc (Xiongwei Song) [0c8877e]
+  * e1000: fix disabling already-disabled warning (Tushar Dave) [3ef3b89]
+  * xfs: quota: check result of register_shrinker() (Aliaksei Karaliou) [e50ca96]
+  * xfs: quota: fix missed destroy of qi_tree_lock (Aliaksei Karaliou) [c142c26]
+  * s390/dasd: fix wrongly assigned configuration data (Stefan Haberland) [c23f1be]
+  * led: core: Fix brightness setting when setting delay_off=0 (Matthieu CASTET) [afe5734]
+  * bnx2x: Improve reliability in case of nested PCI errors (Guilherme G. Piccoli) [dff96f2]
+  * tg3: Enable PHY reset in MTU change path for 5720 (Siva Reddy Kallam) [15f18cc]
+  * tg3: Add workaround to restrict 5762 MRRS to 2048 (Siva Reddy Kallam) [500bd70]
+  * scsi: storvsc: Fix scsi_cmd error assignments in storvsc_handle_error (Cathy Avery) [e46d476]
+  * net: arc_emac: fix arc_emac_rx() error paths (Alexander Kochetkov) [7c87a9b]
+  * spi: atmel: fixed spin_lock usage inside atmel_spi_remove (Radu Pirea) [96cac28]
+  * sget(): handle failures of register_shrinker() (Al Viro) [3d850bc]
+  * ipv6: icmp6: Allow icmp messages to be looped back (Brendan McGrath) [1667653]
+  * mtd: nand: gpmi: Fix failure when a erased page has a bitflip at BBM (Sascha Hauer) [998ce5e]
+  * hrtimer: Ensure POSIX compliance (relative CLOCK_REALTIME hrtimers) (Anna-Maria Gleixner) [8e8b1c0]
+  * ipv6: Skip XFRM lookup if dst_entry in socket cache is valid (Jakub Sitnicki) [ff1e05a]
+  * Linux 3.18.97 (Greg Kroah-Hartman) [2b63a89]
+  * ASN.1: fix out-of-bounds read when parsing indefinite length item (Eric Biggers) [e499290]
+  * usb: dwc3: gadget: Set maxpacket size for ep0 IN (Thinh Nguyen) [94a497b]
+  * arm64: Disable unhandled signal log messages by default (Michael Weiser) [b9e16a3]
+  * irqchip/gic-v3: Use wmb() instead of smb_wmb() in gic_raise_softirq() (Shanker Donthineni) [9f37abf]
+  * x86/oprofile: Fix bogus GCC-8 warning in nmi_setup() (Arnd Bergmann) [2a7d641]
+  * iio: adis_lib: Initialize trigger before requesting interrupt (Lars-Peter Clausen) [7b96a3e]
+  * iio: buffer: check if a buffer has been set up when poll is called (Stefan Windfeldt-Prytz) [f67483c]
+  * cfg80211: fix cfg80211_beacon_dup (Arnd Bergmann) [df8fc87]
+  * scsi: ibmvfc: fix misdefined reserved field in ibmvfc_fcp_rsp_info (Tyrel Datwyler) [6173133]
+  * PCI: keystone: Fix interrupt-controller-node lookup (Johan Hovold) [63ba95b]
+  * netfilter: drop outermost socket lock in getsockopt() (Paolo Abeni) [f338ace]
+
 25/02/2018
 
  * Linux 3.18.96 (Greg Kroah-Hartman) [fabc419]
